--- a/_includes/page-footer.html
+++ b/_includes/page-footer.html
@@ -7,7 +7,7 @@
     </div>
   -->
     <div class="footer-description">
-      Alexandra Ruiz &copy; {{ site.time | date: "%Y" }}. All rights reserved.
+      Teresa Rodriguez Sotelo &copy; {{ site.time | date: "%Y" }}. All rights reserved.
     </div>
     <!--<div class="footer-links">
       <ul>
