--- a/assets/css/cv.css
+++ b/assets/css/cv.css
@@ -237,3 +237,11 @@ footer {
   font-size: 0.9rem;
   color: var(--text-muted);
 }
+
+
+/*****************************************************
+CAPITALIZE HEADINGS
+*****************************************************/
+h1, h2, h3, h4, h5, h6 {
+  text-transform: capitalize;
+}
