--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap');
+
 
 
 @media screen {
@@ -18,7 +20,7 @@ html, body {
 
 /* base font settings */
 h1, h2, h3, h4, h5 {
-  font-family: 'Source Sans 3', sans-serif;
+  font-family: 'Zalando Sans SemiExpanded', sans-serif;
   text-align: left;
 }
 
