--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -17,11 +17,11 @@ PAGE SETUP
   --lichen: #c3d0b7;       /* Soft lichen green */
   --snow: #fefffe;         /* Pure snow white */
   --granite: #2c2c2c;      /* Charcoal granite */
-  --fog: #ededed;          /* Light gray-green */
+  --fog: #f5e6cb;          /* Light gray-green */
   --cedar: #7d8471;        /* Muted cedar green */
   --falu-red: #6f1d1bff;
   --lion: #bb9457ff;
-  --bistre: #432818ff;
+  --bistre: rgb(50, 31, 21);
   --brown: #99582aff;
   --peach: #ffe6a7ff;
 
@@ -169,7 +169,7 @@ PODCAST LISTINGS
 .podcast-card {
   display: flex;
   align-items: stretch;
-  background: #fff;
+  background: var(--fog);
   border-radius: 12px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06);
   margin-bottom: 2rem;
@@ -242,7 +242,7 @@ figure {
 
 figcaption {
   display: block;
-  color:#888;
+  color:var(--lion);
   font-family: 'Source Sans 3', sans-serif;
   font-size:.8rem;
   line-height: 1.1rem;
@@ -291,7 +291,7 @@ DIRECTORY CARDS
 }
 
 .card:hover {
-  background:#eee;
+  background: var(--fog);
   opacity:1;
   transform: scale(1.05); /* Slightly enlarge the card */
 }
@@ -324,7 +324,7 @@ DIRECTORY CARDS
 
 .card  a {
   opacity:1;
-  color:#000;
+  color:var(--bistre);
   text-decoration: none;
   border-bottom:0px
 }
@@ -344,7 +344,7 @@ IMAGE CAROUSEL
   margin: 0 auto;
   overflow: hidden;
   border-radius: 12px;
-  background: #eee;
+  background: var(--fog);
 }
 
 .carousel-item img {
@@ -355,12 +355,12 @@ IMAGE CAROUSEL
   object-fit: contain;
   display: block;
   margin: 0 auto;
-  background: #eee;
+  background: var(--fog);
   /* optional: for letterbox effect */
 }
 
 p.carousel-caption {
-  color: #666;
+  color: var(--lion);
   border: 0px solid black;
   font-family:'Source Sans 3';
   font-size:1.4rem;
@@ -394,7 +394,7 @@ footer {
 /* for a footer on top of the UNM footer */
 .site-footer {
   font-size: 0.9rem;
-  color: #888;
+  color: var(--lion);
   margin-top: 32px;
   border-top: 1px solid #e5e5e5;
   padding-top: 16px;
@@ -419,8 +419,8 @@ footer {
     position: relative;
     width: 100%;
     padding: .4em;
-    border: 1px solid #ccc;
-    background: #fefefe;
+    border: 1px solid var(--lion);
+    background: var(--fog);
     margin-bottom: 1em;
   }
 
