--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -33,13 +33,13 @@ h1 {
 
 h2 {
   font-size: 2.2rem;
-  margin-top: 2rem;
+  margin-top: 1%.5rem;
   margin-bottom: .5rem;
 }
 
 h3 {
-  font-size: 1.7rem;
-  margin-top: 2rem;
+  font-size: 1.5rem;
+  margin-top: 1rem;
   margin-bottom: .5rem;
 }
 
@@ -120,7 +120,7 @@ CODE BLOCKS
   margin: 0;
   font-family: 'Fira Mono', 'Consolas', 'Menlo', monospace;
   font-size: .9em;
-  color: #333;
+  color: var(--bistre);
 }
 
 
