--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Zalando++SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Story+Script&family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Story+Script&family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap');
 
 
 @media screen {
@@ -21,7 +21,7 @@ html, body {
 
 /* base font settings */
 h1, h2, h3, h4, h5 {
-  font-family: 'Story Script', sans-serif;
+  font-family: 'Anton&family', sans-serif;
   text-align: left;
 }
 
@@ -88,7 +88,7 @@ a:hover {
 .map-card {
   margin-top: .5rem;
   text-align: justify;
-  font-family: 'Source Sans 3', sans-serif;
+  font-family: 'Anton&family', sans-serif;
   font-weight: normal;
   font-size: .9rem;
   line-height: 1.2rem;
@@ -97,7 +97,7 @@ a:hover {
 
 .container li {
   margin-bottom: .5rem;
-  font-family: 'Source Sans 3', sans-serif;
+  font-family: 'Anton&family', sans-serif;
   font-size: 1.1rem;
   line-height: 1.4rem;
 }
