--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -18,6 +18,7 @@ TOPNAV
 }
 
 .navbar-brand {
+  font-family: 'Source Sans 3', sans-serif !important;
   font-size: 1.5rem;
   font-weight: bold !important;
   text-decoration: none;
