--- a/assets/css/cv.css
+++ b/assets/css/cv.css
@@ -40,7 +40,7 @@ html, body {
   font-family: "Lato", sans-serif;
   font-size: 16px;
   line-height: 1.2rem;
-  background: var(--bg-main);
+  background: var(--peach);
   color: var(--text-main);
 }
 
